@@ -14,11 +14,21 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-from bzrlib import tests
+import sys
+
+from bzrlib import ui
+from bzrlib.tests import (
+    Feature,
+    TestCaseWithTransport,
+    TestUIFactory,
+    )
+from bzrlib.tests import (
+    StringIOWrapper,
+    )
 import bzrlib.transport
 
 
-class _MedusaFeature(tests.Feature):
+class _MedusaFeature(Feature):
     """Some tests want an FTP Server, check if one is available.
 
     Right now, the only way this is available is if 'medusa' is installed.
@@ -39,7 +49,7 @@ class _MedusaFeature(tests.Feature):
 MedusaFeature = _MedusaFeature()
 
 
-class TestCaseWithFTPServer(tests.TestCaseWithTransport):
+class TestCaseWithFTPServer(TestCaseWithTransport):
 
     _test_needs_features = [MedusaFeature]
 
@@ -50,7 +60,7 @@ class TestCaseWithFTPServer(tests.TestCaseWithTransport):
 
 
 
-class TestCaseAFTP(tests.TestCaseWithTransport):
+class TestCaseAFTP(TestCaseWithTransport):
     """Test aftp transport."""
 
     def test_aftp_degrade(self):
@@ -71,3 +81,42 @@ class TestFTPServer(TestCaseWithFTPServer):
         t = self.get_transport()
         t.put_bytes('foo', 'test bytes\n')
         self.assertEqual('test bytes\n', t.get_bytes('foo'))
+
+
+class TestFTPServerUI(TestCaseWithFTPServer):
+
+    def setUp(self):
+        super(TestFTPServerUI, self).setUp()
+        self.old_factory = ui.ui_factory
+        # The following has the unfortunate side-effect of hiding any ouput
+        # during the tests (including pdb prompts). Feel free to comment them
+        # for debugging purposes but leave them in place, there are needed to
+        # run the tests without any console
+        self.old_stdout = sys.stdout
+        sys.stdout = StringIOWrapper()
+        self.addCleanup(self.restoreUIFactory)
+
+    def restoreUIFactory(self):
+        ui.ui_factory = self.old_factory
+        sys.stdout = self.old_stdout
+
+    def test_prompt_for_password(self):
+        t = self.get_transport()
+        # Ensure that the test framework set the password
+        self.assertIsNot(t._password, None)
+        # Reset the password (get_url set the password to 'bar' so we
+        # reset it to None in the transport before the connection).
+        password = t._password
+        t._password = None
+        ui.ui_factory = TestUIFactory(stdin=password+'\n')
+        # Ask the server to check the password
+        server = self.get_server()
+        # FIXME: There should be a better way to declare authorized users and
+        # passwords to the server
+        authorizer = server._ftp_server.authorizer
+        authorizer.secured_user = t._user
+        authorizer.secured_password = password
+        # Issue a request to the server to connect
+        t.has('whatever/not/existing')
+        # stdin should be empty (the provided password have been consumed)
+        self.assertEqual('', ui.ui_factory.stdin.readline())
